Fixed spacing

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -15,7 +15,7 @@
         align-items: center;
 
         a {
-            color: yellow;
+            color: white;
             opacity: 0.15;
             text-decoration: none;
             font-size: 24px;
